--- a/page6.html
+++ b/page6.html
@@ -76,8 +76,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#t4iCthL4uC-modal" data-bs-target="#t4iCthL4uC-modal">
-                    <img class="w-100" src="assets/images/asset-1-596x360.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-t4iCthL4uC" data-bs-target="#lb-t4iCthL4uC">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#t4iF38yoFB-modal" data-bs-target="#t4iF38yoFB-modal">
+                    <img class="w-100" src="assets/images/asset-1-596x360.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-t4iF38yoFB" data-bs-target="#lb-t4iF38yoFB">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -85,8 +85,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Connecting with FOAIE VERDE&nbsp;</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#t4iCthL4uC-modal" data-bs-target="#t4iCthL4uC-modal">
-                    <img class="w-100" src="assets/images/features2.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-t4iCthL4uC" data-bs-target="#lb-t4iCthL4uC">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#t4iF38yoFB-modal" data-bs-target="#t4iF38yoFB-modal">
+                    <img class="w-100" src="assets/images/features2.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-t4iF38yoFB" data-bs-target="#lb-t4iF38yoFB">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -94,8 +94,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Bounding &amp; Friendship</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#t4iCthL4uC-modal" data-bs-target="#t4iCthL4uC-modal">
-                    <img class="w-100" src="assets/images/whatsapp-image-2022-04-28-at-1.24.31-pm-596x397.jpeg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-t4iCthL4uC" data-bs-target="#lb-t4iCthL4uC">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#t4iF38yoFB-modal" data-bs-target="#t4iF38yoFB-modal">
+                    <img class="w-100" src="assets/images/whatsapp-image-2022-04-28-at-1.24.31-pm-596x397.jpeg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-t4iF38yoFB" data-bs-target="#lb-t4iF38yoFB">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -103,8 +103,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Get to know the EB&nbsp;</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#t4iCthL4uC-modal" data-bs-target="#t4iCthL4uC-modal">
-                    <img class="w-100" src="assets/images/features4.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-t4iCthL4uC" data-bs-target="#lb-t4iCthL4uC">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#t4iF38yoFB-modal" data-bs-target="#t4iF38yoFB-modal">
+                    <img class="w-100" src="assets/images/features4.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-t4iF38yoFB" data-bs-target="#lb-t4iF38yoFB">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -113,11 +113,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="t4iCthL4uC-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="t4iF38yoFB-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-t4iCthL4uC" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-t4iF38yoFB" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/asset-1-596x360.png" alt="Mobirise Website Builder">
@@ -133,18 +133,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-t4iCthL4uC" data-bs-target="#lb-t4iCthL4uC"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-t4iCthL4uC" data-bs-target="#lb-t4iCthL4uC"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-t4iCthL4uC" data-bs-target="#lb-t4iCthL4uC"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-t4iCthL4uC" data-bs-target="#lb-t4iCthL4uC"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-t4iF38yoFB" data-bs-target="#lb-t4iF38yoFB"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-t4iF38yoFB" data-bs-target="#lb-t4iF38yoFB"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-t4iF38yoFB" data-bs-target="#lb-t4iF38yoFB"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-t4iF38yoFB" data-bs-target="#lb-t4iF38yoFB"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-t4iCthL4uC">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-t4iF38yoFB">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-t4iCthL4uC">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-t4iF38yoFB">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -439,7 +439,7 @@
         </div>
         
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2749935" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Designed with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-design-software.html">Free Web Page Designing Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2749935" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Designed with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-design-software.html">Free Web Designing Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
