create github pages

--- a/page1.html
+++ b/page1.html
@@ -122,13 +122,11 @@
                         <div class="user">
                             <div class="user_image">
                                 <div class="item-wrapper position-relative">
-                                    <img src="assets/images/team1.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3">
+                                    <img src="assets/images/adi-600x604.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3">
                                 </div>
                             </div>
                             <div class="user_text mb-4">
-                                <p class="mbr-fonts-style display-7">
-                                    Themes in the Mobirise website builder offer multiple blocks: intros, sliders, galleries, forms, articles, and so on. Start a project and click on the red plus buttons to see the blocks available for your theme.
-                                </p>
+                                <p class="mbr-fonts-style display-7">We are strong we are united we are EB!</p>
                             </div>
                             <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Adrian Ardelean&nbsp;</strong></div>
                             <div class="user_desk mbr-fonts-style display-7">VP Marketing</div>
@@ -137,16 +135,66 @@
                         <div class="user">
                             <div class="user_image">
                                 <div class="item-wrapper position-relative">
-                                    <img src="assets/images/253298372-4782472878464251-8308393770162755592-n-600x600.jpg" alt="Mobirise Website Builder" data-slide-to="4" data-bs-slide-to="4">
+                                    <img src="assets/images/capture-600x600.jpg" alt="Mobirise Website Builder" data-slide-to="4" data-bs-slide-to="4">
                                 </div>
                             </div>
                             <div class="user_text mb-4">
-                                <p class="mbr-fonts-style display-7">
-                                    Themes in the Mobirise website builder offer multiple blocks: intros, sliders, galleries, forms, articles, and so on. Start a project and click on the red plus buttons to see the blocks available for your theme.
-                                </p>
+                                <p class="mbr-fonts-style display-7">TRIX is the moment, the experience and the opportunity for a lot of things in AIESEC&nbsp;</p>
                             </div>
-                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Adrian Ardelean&nbsp;</strong></div>
-                            <div class="user_desk mbr-fonts-style display-7">VP Marketing</div>
+                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Ana Ciosu&nbsp;</strong></div>
+                            <div class="user_desk mbr-fonts-style display-7">VP EwA</div>
+                        </div>
+                    </div><div class="embla__slide slider-image item" style="margin-left: 7rem; margin-right: 7rem;">
+                        <div class="user">
+                            <div class="user_image">
+                                <div class="item-wrapper position-relative">
+                                    <img src="assets/images/ioana-600x603.jpg" alt="Mobirise Website Builder" data-slide-to="5" data-bs-slide-to="5">
+                                </div>
+                            </div>
+                            <div class="user_text mb-4">
+                                <p class="mbr-fonts-style display-7">At TRIX you will get the opportunity to meet your future role models.</p>
+                            </div>
+                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Ioana Dragos&nbsp;&nbsp;</strong></div>
+                            <div class="user_desk mbr-fonts-style display-7">VP oGV</div>
+                        </div>
+                    </div><div class="embla__slide slider-image item" style="margin-left: 7rem; margin-right: 7rem;">
+                        <div class="user">
+                            <div class="user_image">
+                                <div class="item-wrapper position-relative">
+                                    <img src="assets/images/244426442-4393909047360877-640371276037461937-n-320x320.jpg" alt="Mobirise Website Builder" data-slide-to="6" data-bs-slide-to="6">
+                                </div>
+                            </div>
+                            <div class="user_text mb-4">
+                                <p class="mbr-fonts-style display-7">TRIX is the moment when all of the things fell into place.</p>
+                            </div>
+                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Miruna Turcu&nbsp;&nbsp;</strong></div>
+                            <div class="user_desk mbr-fonts-style display-7">VP oGT</div>
+                        </div>
+                    </div><div class="embla__slide slider-image item" style="margin-left: 7rem; margin-right: 7rem;">
+                        <div class="user">
+                            <div class="user_image">
+                                <div class="item-wrapper position-relative">
+                                    <img src="assets/images/69826792-2591316010944808-1990868623329067008-n-320x321.jpg" alt="Mobirise Website Builder" data-slide-to="7" data-bs-slide-to="7">
+                                </div>
+                            </div>
+                            <div class="user_text mb-4">
+                                <p class="mbr-fonts-style display-7">TRIX for me means strengthening my relationship with my LC.&nbsp;</p>
+                            </div>
+                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Ștefania Melinte&nbsp;</strong></div>
+                            <div class="user_desk mbr-fonts-style display-7">VP iGV</div>
+                        </div>
+                    </div><div class="embla__slide slider-image item" style="margin-left: 7rem; margin-right: 7rem;">
+                        <div class="user">
+                            <div class="user_image">
+                                <div class="item-wrapper position-relative">
+                                    <img src="assets/images/117222261-1705488079601601-3257333337693205518-n-320x320.jpg" alt="Mobirise Website Builder" data-slide-to="8" data-bs-slide-to="8">
+                                </div>
+                            </div>
+                            <div class="user_text mb-4">
+                                <p class="mbr-fonts-style display-7">TRIX is the moment, the experience and the opportunity for a lot of things in AIESEC.&nbsp;</p>
+                            </div>
+                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Diana Ieremie&nbsp;</strong></div>
+                            <div class="user_desk mbr-fonts-style display-7">VP iGT</div>
                         </div>
                     </div>
                 </div>
@@ -193,13 +241,11 @@
                         <div class="user">
                             <div class="user_image">
                                 <div class="item-wrapper position-relative">
-                                    <img src="assets/images/team3.jpg" alt="Mobirise Website Builder">
+                                    <img src="assets/images/274216716-4867967693258231-1016848969705282631-n-320x320.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
                                 </div>
                             </div>
                             <div class="user_text mb-4">
-                                <p class="mbr-fonts-style display-7">
-                                    Themes in the Mobirise website builder offer multiple blocks: intros, sliders, galleries, forms, articles, and so on. Start a project and click on the red plus buttons to see the blocks available for your theme.
-                                </p>
+                                <p class="mbr-fonts-style display-7">For me TRIX is a very special event, I don’t have a specific word to describe it, it’s more like a feeling, that feeling that you are home.</p>
                             </div>
                             <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Alexandra Chinciusan</strong></div>
                             <div class="user_desk mbr-fonts-style display-7">OCP/CEO of TRIX Odyssey</div>
@@ -209,27 +255,22 @@
                         <div class="user">
                             <div class="user_image">
                                 <div class="item-wrapper position-relative">
-                                    <img src="assets/images/team2.jpg" alt="Mobirise Website Builder">
+                                    <img src="assets/images/67560066-2883137208422885-1521649639583907840-n-600x900.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
                                 </div>
                             </div>
                             <div class="user_text mb-4">
                                 <p class="mbr-fonts-style display-7">
-                                    For me TRIX is a very special event, I don’t have a specific word to describe it, it’s more like a feeling, that feeling that you are home. For me, TRIX was the exact moment when I made up my mind and I also realized what I truly wanna do in the future
-                                </p>
+                                    For me TRIX is a very special event, I don’t have a specific word to describe it, it’s more like a feeling, that feeling that you are home.&nbsp;</p>
                             </div>
-                            <div class="user_name mbr-fonts-style mb-2 display-7">
-                                <strong>Linda</strong>
-                            </div>
-                            <div class="user_desk mbr-fonts-style display-7">
-                                DEVELOPER
-                            </div>
+                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Paul Buciuman</strong></div>
+                            <div class="user_desk mbr-fonts-style display-7">OC F&amp;L</div>
                         </div>
                     </div>
                     <div class="embla__slide slider-image item" style="margin-left: 7rem; margin-right: 7rem;">
                         <div class="user">
                             <div class="user_image">
                                 <div class="item-wrapper position-relative">
-                                    <img src="assets/images/team1.jpg" alt="Mobirise Website Builder">
+                                    <img src="assets/images/capture-409x398.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2">
                                 </div>
                             </div>
                             <div class="user_text mb-4">
@@ -237,12 +278,68 @@
                                     Themes in the Mobirise website builder offer multiple blocks: intros, sliders, galleries, forms, articles, and so on. Start a project and click on the red plus buttons to see the blocks available for your theme.
                                 </p>
                             </div>
-                            <div class="user_name mbr-fonts-style mb-2 display-7">
-                                <strong>Herbert</strong>
+                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Cătălin Șerban</strong></div>
+                            <div class="user_desk mbr-fonts-style display-7">OC Marketing</div>
+                        </div>
+                    </div><div class="embla__slide slider-image item" style="margin-left: 7rem; margin-right: 7rem;">
+                        <div class="user">
+                            <div class="user_image">
+                                <div class="item-wrapper position-relative">
+                                    <img src="assets/images/274377899-3172923226311066-816170586844896279-n-600x450.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3">
+                                </div>
                             </div>
-                            <div class="user_desk mbr-fonts-style display-7">
-                                DEVELOPER
+                            <div class="user_text mb-4">
+                                <p class="mbr-fonts-style display-7">
+                                    Themes in the Mobirise website builder offer multiple blocks: intros, sliders, galleries, forms, articles, and so on. Start a project and click on the red plus buttons to see the blocks available for your theme.
+                                </p>
                             </div>
+                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Carmelina Lungu</strong></div>
+                            <div class="user_desk mbr-fonts-style display-7">OC Sales</div>
+                        </div>
+                    </div><div class="embla__slide slider-image item" style="margin-left: 7rem; margin-right: 7rem;">
+                        <div class="user">
+                            <div class="user_image">
+                                <div class="item-wrapper position-relative">
+                                    <img src="assets/images/278598798-4946740262048238-6956596610778970922-n-600x602.jpg" alt="Mobirise Website Builder" data-slide-to="4" data-bs-slide-to="4">
+                                </div>
+                            </div>
+                            <div class="user_text mb-4">
+                                <p class="mbr-fonts-style display-7">
+                                    Themes in the Mobirise website builder offer multiple blocks: intros, sliders, galleries, forms, articles, and so on. Start a project and click on the red plus buttons to see the blocks available for your theme.
+                                </p>
+                            </div>
+                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Roxana Cîrcu</strong></div>
+                            <div class="user_desk mbr-fonts-style display-7">OC Reception &amp; DXP</div>
+                        </div>
+                    </div><div class="embla__slide slider-image item" style="margin-left: 7rem; margin-right: 7rem;">
+                        <div class="user">
+                            <div class="user_image">
+                                <div class="item-wrapper position-relative">
+                                    <img src="assets/images/67633907-1262701120556602-3765146005880700928-n-600x608.jpg" alt="Mobirise Website Builder" data-slide-to="5" data-bs-slide-to="5">
+                                </div>
+                            </div>
+                            <div class="user_text mb-4">
+                                <p class="mbr-fonts-style display-7">
+                                    Themes in the Mobirise website builder offer multiple blocks: intros, sliders, galleries, forms, articles, and so on. Start a project and click on the red plus buttons to see the blocks available for your theme.
+                                </p>
+                            </div>
+                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Bianca Ciurea</strong></div>
+                            <div class="user_desk mbr-fonts-style display-7">OC Sales</div>
+                        </div>
+                    </div><div class="embla__slide slider-image item" style="margin-left: 7rem; margin-right: 7rem;">
+                        <div class="user">
+                            <div class="user_image">
+                                <div class="item-wrapper position-relative">
+                                    <img src="assets/images/279376165-3200674863535462-1354320921984184066-n-600x600.jpg" alt="Mobirise Website Builder" data-slide-to="6" data-bs-slide-to="6">
+                                </div>
+                            </div>
+                            <div class="user_text mb-4">
+                                <p class="mbr-fonts-style display-7">
+                                    Themes in the Mobirise website builder offer multiple blocks: intros, sliders, galleries, forms, articles, and so on. Start a project and click on the red plus buttons to see the blocks available for your theme.
+                                </p>
+                            </div>
+                            <div class="user_name mbr-fonts-style mb-2 display-7"><strong>Alexandra Mânzat</strong></div>
+                            <div class="user_desk mbr-fonts-style display-7">OC Reception &amp; DXP</div>
                         </div>
                     </div>
                 </div>
@@ -257,7 +354,7 @@
             </button>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2749935" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/web-page-maker.html">Web Page Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2749935" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with &#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
