--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
 <section data-bs-version="5.1" class="slider1 cid-t46bh5EAA4" id="slider1-1h">
     
-    <div class="carousel slide" id="t4jhFtgEwl" data-ride="carousel" data-bs-ride="carousel" data-interval="10000" data-bs-interval="10000">
+    <div class="carousel slide" id="t4k629t1Hh" data-ride="carousel" data-bs-ride="carousel" data-interval="10000" data-bs-interval="10000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#t4jhFtgEwl" data-bs-target="#t4jhFtgEwl"></li>
-            <li data-slide-to="1" data-bs-slide-to="1" data-target="#t4jhFtgEwl" data-bs-target="#t4jhFtgEwl"></li>
-            <li data-slide-to="2" data-bs-slide-to="2" data-target="#t4jhFtgEwl" data-bs-target="#t4jhFtgEwl"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#t4jhFtgEwl" data-bs-target="#t4jhFtgEwl"></li>
+            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#t4k629t1Hh" data-bs-target="#t4k629t1Hh"></li>
+            <li data-slide-to="1" data-bs-slide-to="1" data-target="#t4k629t1Hh" data-bs-target="#t4k629t1Hh"></li>
+            <li data-slide-to="2" data-bs-slide-to="2" data-target="#t4k629t1Hh" data-bs-target="#t4k629t1Hh"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#t4k629t1Hh" data-bs-target="#t4k629t1Hh"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -100,11 +100,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#t4jhFtgEwl">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#t4k629t1Hh">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#t4jhFtgEwl">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#t4k629t1Hh">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Next</span>
         </a>
@@ -189,10 +189,10 @@
                 <img src="assets/images/logo-with-logotype-two-rows-350x350-240x240.png" alt="Mobirise Website Builder">
             </div>
             <div class="col-md-3 card">
-                <img src="assets/images/wayout-logo-209x102.png" alt="Mobirise Website Builder">
+                <img src="assets/images/brutaria-240x188.jpg" alt="Mobirise Website Builder">
             </div>
             <div class="col-md-3 card">
-                <img src="assets/images/3.png" alt="Mobirise Website Builder">
+                <img src="assets/images/catutzz-240x240.jpg" alt="Mobirise Website Builder">
             </div>
             <div class="col-md-3 card">
                 <img src="assets/images/60745844-617550138761202-7166698153704423424-n-240x240.png" alt="Mobirise Website Builder">
@@ -281,7 +281,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2749935" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Designed with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-design-software.html">Web Designing Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/countdown/countdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2749935" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Web Page Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/countdown/countdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
